<resources>
    <string name="app_name">Xplanner</string>
    <string name="tag_line">Your Digital Wallet</string>
    <string name="developers">Maanav Thalapilly</string>
    <string name="data">2024</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Learn to manage your finances!</string>
    <string name="slide_1_desc">Get regular overviews and tips for improvement</string>

    <string name="slide_2_title">Know where the money goes!</string>
    <string name="slide_2_desc">With categories and easy-to-read charts</string>

    <string name="slide_3_title">Track your spending!</string>
    <string name="slide_3_desc">Keep track of your expenses manually</string>

    <string name="slide_4_title">All your finances in one place!</string>
    <string name="slide_4_desc">See bigger picture by having all your financial sources in one point</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="button_next">NEXT</string>
    <string name="text_setup">Set up your cash Balance</string>
    <string name="text_howmuch">How much cash do you have in your physical wallet?</string>
    <string name="text_balanceinput">0 INR</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_about">About</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="Date">Date</string>
    <string name="date">11/11/2019</string>
    <string name="Category">Category</string>
    <string name="Description">Description</string>
    <string-array name="date_array">
        <item>All</item>
        <item>This Week</item>
        <item>This Month</item>

    </string-array>

    <string name="nav_header_desc">User Profile Picture</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">profile@email.com</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="title_activity_home">Expense Tracker</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordRetype">Retype Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="income">Monthly Income</string>
    <string name="savings">Savings</string>
    <string name="profile">Profile</string>
    <string name="updateProfile">Update Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="demo">Demo</string>

    <string name="action_demo">DEMO</string>


    <!--buttons  -->
    <string name="btn_login">Login</string>
    <string name="btn_newUser">New User</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_return2login">Return to Login</string>
    <string name="expense">Expense</string>
    <string name="expenses">Expenses</string>
    <string name="about">About</string>
    <string name="about_expense_tracker">About Expense Tracker</string>
    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="information">Information</string>
    <string name="expensesColon">Expenses:</string>
    <string name="analyticsColon">Analytics:</string>
    <string name="furtherInquires">For further inquires email : expenseTracker@gmail.com</string>

</resources>
