<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".login.NewUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/create_username"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/create_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/create_retypePassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/passwordRetype"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/create_firstname"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/create_lastname"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/create_email"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/create_age"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number" />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="315dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_save" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_return2login"
            android:visibility="invisible" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>